--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <div id="prev"><i class="fa-solid fa-arrow-left"></i></div>
                 <div id="next"><i class="fa-solid fa-arrow-right"></i></div>
             </div>
+            <div id="thumnails">
+            </div>
         </div>
 
         <script type="text/javascript" src="js/main.js"></script>
