--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <div id="carousel">
                 <div id="prev"><i class="fa-solid fa-arrow-left"></i></div>
                 <div id="next"><i class="fa-solid fa-arrow-right"></i></div>
+                <div id="play"><i class="fa-solid fa-play"></i></i></div>
+                <div id="stop"><i class="fa-solid fa-pause"></i></div>
+                <div id="invert"><i class="fa-solid fa-right-left"></i></div>
             </div>
             <div id="thumnails">
             </div>
